agrega los archivos json y el modelo de especificaciones

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <title>Checa Servicios</title>
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   </head>
-  <body> 
+
+  <body>
+
+    <!-- Logo -->
+    <div class="logo">
+          <img src="assets/img/branding/logo-light.png" alt="Logo blanco de JelpMe" />
+    </div>
+
+    <!-- Login div -->
+    <div class="login">
+        <input type="text" placeholder="Username">
+        <input type="password" placeholder="Password">
+        <a href="#" class="btn">Ingresar</a>
+    </div>
+
   </body>
 </html>
