agrega pagina de bienvenida

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     </div>
 
     <!-- Login div -->
-    <div class="login">
-        <input type="text" placeholder="Username">
-        <input type="password" placeholder="Password">
-        <a href="#" class="btn">Ingresar</a>
+    <div class="login-container">
+        <p>Ingresa con tus datos de Keeper:</p>
+        <input type="text" placeholder="ID de Keeper">
+        <input type="password" placeholder="Contraseña">
+        <a href="services.html" class="btn">Ingresar</a>
+        <p>Si aun no estas registrado y quieres prestar tus servicios en la plataforma dirígete <a href="#">aquí</a>.</p>
     </div>
 
   </body>
